added community-user endpoints and community-request functions
